# raknestod

./: README.md  pyproject.toml  se.danielnylander.raknestod.desktop
.tx/: config
po/: raknestod.pot  sv.mo  sv.po
src/raknestod/: main.py
