[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.backends._legacy:_Backend"
[project]
name = "raknestod"
version = "0.1.0"
description = "Visual math for children with IF"
authors = [{name = "Daniel Nylander", email = "daniel@danielnylander.se"}]
license = {text = "GPL-3.0-or-later"}
requires-python = ">=3.10"
dependencies = ["PyGObject>=3.42"]
[project.gui-scripts]
raknestod = "raknestod.main:main"
[tool.setuptools.packages.find]
where = ["src"]
